tests/test_input_files/good/test_good_expression_2.punkt
main {
    const a = (((((((1))))))).
}
