tests/test_input_files/bad/test_bad_array_2.punkt
main {
	const a = alloc (4).
}
